--- a/DeadTree/Views/Home/Regist.cshtml
+++ b/DeadTree/Views/Home/Regist.cshtml
@@ -1,18 +1,17 @@
 ﻿@model DeadTree.Models.DBClass.ProfessorModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "注册";
 }
 
-<h2>Edit</h2>
+<div class="jumbotron" style="background-color:cornflowerblue">
+    <h2 style="color:white">@ViewData["Title"]</h2>
+</div>
 
-<h4>ProfessorModel</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Regist">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="PId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -64,24 +63,15 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Salt" class="control-label"></label>
-                <input asp-for="Salt" class="form-control" />
-                <span asp-validation-for="Salt" class="text-danger"></span>
+                <label asp-for="ConfirmPassword" class="control-label"></label>
+                <input asp-for="ConfirmPassword" class="form-control" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" class="form-control"></select>
-                <span asp-validation-for="Type" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="注册" class="btn btn-primary btn-block" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
