--- a/DeadTree/Views/Shared/_Layout.cshtml
+++ b/DeadTree/Views/Shared/_Layout.cshtml
@@ -16,6 +16,13 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 </head>
+
+@using System.Security.Claims;
+@{
+    var t = User.FindFirst(ClaimTypes.Role);
+    var userType = t == null ? "" : t.Value;
+}
+
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -30,25 +37,60 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="ComponentModels" asp-action="Index">Component</a></li>
-                    <li><a asp-area="" asp-controller="ProfessorModels" asp-action="Index">Professor</a></li>
-                    <li><a asp-area="" asp-controller="ApparatusModels" asp-action="Index">Apparatus</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">故障信息管理 <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="FaultNameModels" asp-action="Index">故障名称管理</a></li>
-                            <li><a asp-area="" asp-controller="FaultFeaturesModels" asp-action="Index">故障特征管理</a></li>
-                            <li><a asp-area="" asp-controller="FaultResultsModels" asp-action="Index">故障原因管理</a></li>
-                        </ul>
-                    </li>                    
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">调查问卷 <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="QuestionsModels" asp-action="Index">问题管理</a></li>
-                            <li><a asp-area="" asp-controller="FeaturesMappingModels" asp-action="Index">故障特征映射</a></li>
-                            <li><a asp-area="" asp-controller="ResultsMappingModels" asp-action="Index">故障原因映射</a></li>
-                        </ul>
-                    </li>
+                    @switch (userType)
+                    {
+                        case "专家":
+                            {
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">故障信息管理 <span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a asp-area="" asp-controller="FaultNameModels" asp-action="Index">故障名称管理</a></li>
+                                        <li><a asp-area="" asp-controller="FaultFeaturesModels" asp-action="Index">故障特征管理</a></li>
+                                        <li><a asp-area="" asp-controller="FaultResultsModels" asp-action="Index">故障原因管理</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">调查问卷 <span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a asp-area="" asp-controller="QuestionsModels" asp-action="Index">问题管理</a></li>
+                                        <li><a asp-area="" asp-controller="FeaturesMappingModels" asp-action="Index">故障特征映射</a></li>
+                                        <li><a asp-area="" asp-controller="ResultsMappingModels" asp-action="Index">故障原因映射</a></li>
+                                    </ul>
+                                </li>
+                                <li><a asp-area="" asp-controller="Home" asp-action="Logout">注销</a></li>
+                                break;
+                            }
+                        case "超级管理员":
+                            {
+                                <li><a asp-area="" asp-controller="ComponentModels" asp-action="Index">Component</a></li>
+                                <li><a asp-area="" asp-controller="ProfessorModels" asp-action="Index">Professor</a></li>
+                                <li><a asp-area="" asp-controller="ApparatusModels" asp-action="Index">Apparatus</a></li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">故障信息管理 <span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a asp-area="" asp-controller="FaultNameModels" asp-action="Index">故障名称管理</a></li>
+                                        <li><a asp-area="" asp-controller="FaultFeaturesModels" asp-action="Index">故障特征管理</a></li>
+                                        <li><a asp-area="" asp-controller="FaultResultsModels" asp-action="Index">故障原因管理</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">调查问卷 <span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a asp-area="" asp-controller="QuestionsModels" asp-action="Index">问题管理</a></li>
+                                        <li><a asp-area="" asp-controller="FeaturesMappingModels" asp-action="Index">故障特征映射</a></li>
+                                        <li><a asp-area="" asp-controller="ResultsMappingModels" asp-action="Index">故障原因映射</a></li>
+                                    </ul>
+                                </li>
+                                <li><a asp-area="" asp-controller="Home" asp-action="Logout">注销</a></li>
+                                break;
+                            }
+                        default:
+                            {
+                                <li><a asp-area="" asp-controller="Home" asp-action="Regist">注册</a></li>
+                                <li><a asp-area="" asp-controller="Home" asp-action="Login">登录</a></li>
+                                break;
+                            }
+                    }
                 </ul>
             </div>
         </div>
