--- a/DeadTree/Views/ProfessorModels/Delete.cshtml
+++ b/DeadTree/Views/ProfessorModels/Delete.cshtml
@@ -65,6 +65,24 @@
         <dd>
             @Html.DisplayFor(model => model.BankName)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Password)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Password)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Salt)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Salt)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Type)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Type)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
