--- a/DeadTree/Views/ProfessorModels/Index.cshtml
+++ b/DeadTree/Views/ProfessorModels/Index.cshtml
@@ -39,6 +39,15 @@
                 <th>
                     @Html.DisplayNameFor(model => model.BankName)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Password)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Salt)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Type)
+                </th>
             <th></th>
         </tr>
     </thead>
@@ -71,6 +80,15 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BankName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Password)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Salt)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.PId">Edit</a> |
