--- a/DeadTree/Views/Home/Regist.cshtml
+++ b/DeadTree/Views/Home/Regist.cshtml
@@ -43,6 +43,14 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Type" class="control-label"></label>
+                <select asp-for="Type" class="form-control">
+                    <option value="1">专家</option>
+                    <option value="2">用户</option>
+                </select>
+                <span asp-validation-for="Type" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="WeChat" class="control-label"></label>
                 <input asp-for="WeChat" class="form-control" />
                 <span asp-validation-for="WeChat" class="text-danger"></span>
